Completed mentions' presentation and logic. Fixed articles' names that are too long on previous/next labels.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -399,6 +399,28 @@ h3 span {
     top: -1px;
 }
 
+#expand-mentions-link a {
+    background: #C88116;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    padding: 2px 5px;
+    font-size: 70%;
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    -webkit-box-shadow: 1px 1px 2px rgba(0,0,0,.3);
+    vertical-align: middle;
+}
+
+#expand-mentions-link a span {
+    background: #7D510E;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    padding: 0 5px 2px 5px;
+    position: relative;
+    top: -1px;
+}
+
 /** Form **/
 
 form {
